Updates for automated CI with Codefresh

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>{% block title %}{% endblock %} - Flaskr</title>
+<title>{% block title %}{% endblock %} - Flaskr : Deployed with Codefresh to K8s</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <nav>
   <h1><a href="{{ url_for('index') }}">Flaskr</a></h1>
