--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<title>{% block title %}{% endblock %} - Flaskr - CF</title>
+<title>{% block title %}{% endblock %} - Flaskr - CF (dev)</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <nav>
-  <h1><a href="{{ url_for('index') }}">Flaskr - CF</a></h1>
+  <h1><a href="{{ url_for('index') }}">Flaskr - CF (dev)</a></h1>
   <ul>
     {% if g.user %}
       <li><span>{{ g.user['username'] }}</span>
